--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -29,6 +29,7 @@
       "~graphql": ["src/graphql/index.ts"],
       "~uikit": ["src/components/uikit/index.ts"],
       "~components/*": ["src/components/*"],
+      "~design-system/*": ["src/design-system/*"],
       "~utils/*": ["src/utils/*"],
       "~types/*": ["src/types/*"],
       "~test/*": ["src/test/*"]
