feat(client): replace react-icons with figma based icons

--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,8 @@
     "uikit:preview": "storybook dev -p 6006",
     "uikit:build": "storybook build",
     "design-system:sync": "npm run design-system:tokenize && npm run design-system:codegen && npm run design-system:format",
-    "design-system:tokenize": "figmage tokenize --env .env.figma",
-    "design-system:codegen": "figmage codegen --env .env.figma",
+    "design-system:tokenize": "npx figmage tokenize --env .env.figma",
+    "design-system:codegen": "npx figmage codegen --env .env.figma",
     "design-system:format": "prettier --write \"src/design-system/*.ts\"",
     "generate:graphql": "graphql-codegen --config codegen.yml"
   },
@@ -41,7 +41,6 @@
     "react-aria-components": "1.0.0-alpha.4",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.4.0",
-    "react-icons": "4.8.0",
     "react-merge-refs": "1.1.0",
     "react-router": "6.10.0",
     "react-router-dom": "6.10.0",
@@ -92,7 +91,6 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "0.6.12",
-    "figmage": "0.10.0",
     "jsdom": "22.0.0",
     "pg-promise": "10.11.1",
     "prettier": "2.8.8",
