--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,8 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.13",
-    "@lingui/macro": "4.1.2",
-    "@lingui/react": "4.1.2",
+    "@lingui/macro": "4.2.1",
+    "@lingui/react": "4.2.1",
     "@loadable/component": "5.15.3",
     "@sentry/browser": "7.50.0",
     "apollo3-cache-persist": "0.14.1",
@@ -53,9 +53,9 @@
     "@graphql-codegen/typescript": "3.0.4",
     "@graphql-codegen/typescript-operations": "3.0.4",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
-    "@lingui/cli": "4.1.2",
-    "@lingui/swc-plugin": "4.0.0",
-    "@lingui/vite-plugin": "4.1.2",
+    "@lingui/cli": "4.2.1",
+    "@lingui/swc-plugin": "4.0.2",
+    "@lingui/vite-plugin": "4.2.1",
     "@optimize-lodash/rollup-plugin": "4.0.3",
     "@rollup/plugin-strip": "3.0.2",
     "@storybook/addon-essentials": "7.0.12",
@@ -63,7 +63,7 @@
     "@storybook/addon-links": "7.0.12",
     "@storybook/react-vite": "7.0.12",
     "@storybook/theming": "7.0.12",
-    "@swc/core": "1.3.55",
+    "@swc/core": "1.3.58",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -103,6 +103,17 @@
     "vite-plugin-favicon2": "1.1.5",
     "vite-tsconfig-paths": "4.2.0",
     "vitest": "0.31.1"
+  },
+  "overrides": {
+    "@vitejs/plugin-react-swc": {
+      "@swc/core-darwin-arm64": "1.3.58",
+      "@swc/core-darwin-x64": "1.3.58",
+      "@swc/core-linux-arm-gnueabihf": "1.3.58",
+      "@swc/core-linux-arm64-gnu": "1.3.58",
+      "@swc/core-linux-arm64-musl": "1.3.58",
+      "@swc/core-linux-x64-gnu": "1.3.58",
+      "@swc/core-linux-x64-musl": "1.3.58"
+    }
   },
   "lingui": {
     "locales": [
