feat(client): update docker image with specific node/npm versions

--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -1,7 +1,21 @@
 # Builder and tester container for production build
-# NOTE: Use the same cypress version both in Dockerfile and package.json to
-#       avoid unnecessary cypress download
-FROM ghcr.io/taitounited/cypress:12.5.0 as builder
+
+# NOTE: Enable cypress and the browsers you want test against only if you are
+# doing e2e testing! Otherwise keep the ARGs commented out so that the browsers
+# are not installed unnecessarily making the build faster.
+
+# NOTE: the browser versions need to be exact versions!
+
+# ARG CHROME_VERSION='107.0.5304.121-1'
+# ARG EDGE_VERSION='100.0.1185.29-1'
+# ARG FIREFOX_VERSION='107.0'
+# ARG CYPRESS_VERSION='12.16.0'
+
+# Node v18.16.0 has npm v9.6.5
+ARG NODE_VERSION='18.16.0'
+ARG BASE_IMAGE='node:18.16.0-alpine'
+
+FROM cypress/factory
 
 RUN mkdir -p /develop
 WORKDIR /develop
