--- a/client/package.json
+++ b/client/package.json
@@ -79,7 +79,6 @@
     "@vitejs/plugin-react": "4.0.0",
     "@vitejs/plugin-react-swc": "3.3.0",
     "@vitest/coverage-c8": "0.31.1",
-    "cypress": "12.5.0",
     "eslint": "8.39.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-standard": "17.0.0",
@@ -114,6 +113,10 @@
       "@swc/core-linux-x64-gnu": "1.3.58",
       "@swc/core-linux-x64-musl": "1.3.58"
     }
+  },
+  "engines": {
+    "node": "18.16.x",
+    "npm": "9.5.x"
   },
   "lingui": {
     "locales": [
