fix(client): add as builder back to dockerfile

--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -19,7 +19,7 @@
 ARG NODE_VERSION='18.16.0'
 ARG BASE_IMAGE='node:18.16.0-alpine'
 
-FROM cypress/factory
+FROM cypress/factory as builder
 
 RUN mkdir -p /develop
 WORKDIR /develop
