chore(client): improve code generation scripts

--- a/client/package.json
+++ b/client/package.json
@@ -10,24 +10,24 @@
     "test": "echo TODO run tests but not cypress",
     "cypress:run": "if [ -z ${test_name} ]; then cypress run; else cypress run -s test/integration/**/${test_name}.spec.ts; fi",
     "cypress:open": "cypress open",
-    "prestart": "npm run styled-system:codegen",
-    "prebuild": "npm run styled-system:codegen",
+    "prestart": "npm run generate",
+    "prebuild": "npm run generate",
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "analyze": "ANALYZE=true npm run build && source-map-explorer 'build/assets/*.js' --no-border-checks",
     "lang:add-locale": "lingui add-locale",
     "lang:extract": "lingui extract",
-    "lang:compile": "lingui compile",
     "uikit:preview": "storybook dev -p 6006",
     "uikit:build": "storybook build",
     "design-system:sync": "npm run design-system:tokenize && npm run design-system:codegen && npm run design-system:format",
     "design-system:tokenize": "npx figmage tokenize --env .env.figma",
     "design-system:codegen": "npx figmage codegen --env .env.figma",
-    "design-system:format": "prettier --write \"src/design-system/*.ts\"",
-    "styled-system:codegen": "panda codegen --clean",
-    "styled-system:debug": "panda debug",
-    "generate:graphql": "graphql-codegen --config codegen.yml"
+    "design-system:format": "prettier --write \"design-system/*.ts\"",
+    "generate": "npm-run-all -p generate:*",
+    "generate:lang": "lingui compile",
+    "generate:graphql": "graphql-codegen --config codegen.yml",
+    "generate:styled-system": "panda codegen --clean"
   },
   "dependencies": {
     "@apollo/client": "3.7.13",
@@ -97,6 +97,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "0.6.12",
     "jsdom": "22.0.0",
+    "npm-run-all": "4.1.5",
     "patch-package": "7.0.0",
     "pg-promise": "10.11.1",
     "prettier": "2.8.8",
