--- a/worker/package.json
+++ b/worker/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "full-stack-template-worker",
+  "name": "scanwai-web-worker",
   "private": true,
   "scripts": {
-    "unit": "jest src/ --passWithNoTests -t",
-    "test": "jest test/ --passWithNoTests -t",
+    "unit": "jest --rootDir=src --passWithNoTests -t",
+    "test": "jest --rootDir=test --passWithNoTests -t",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development ts-node-dev --respawn --inspect=0.0.0.0:9229 -- index.ts | bunyan -l debug",
     "lint": "tsc -p . --noEmit && eslint './src/**/*.ts' --ignore-path .eslintignore --quiet",
@@ -12,50 +12,49 @@
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js"
   },
   "dependencies": {
-    "@hapi/boom": "^9.1.0",
-    "@sentry/node": "~7.43.0",
+    "@hapi/boom": "^10.0.1",
+    "@sentry/node": "^7.57.0",
     "aws-sdk": "^2.807.0",
-    "axios": "^0.21.0",
+    "axios": "^1.4.0",
     "bunyan": "^1.8.14",
     "koa": "^2.13.0",
-    "koa-joi-router": "^7.0.0",
+    "koa-joi-router": "^8.0.0",
     "koa-qs": "^3.0.0",
     "lodash": "^4.17.15",
     "mustache": "^4.1.0",
-    "pg-promise": "^10.8.1",
-    "serverless-http": "^2.5.0",
-    "showdown": "^1.9.1",
+    "pg-promise": "^11.5.0",
+    "serverless-http": "^3.2.0",
+    "showdown": "^2.1.0",
     "stack-trace": "0.0.10",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/bunyan": "1.8.6",
-    "@types/jest": "^26.0.18",
-    "@types/joi": "^14.3.4",
-    "@types/koa": "^2.11.3",
-    "@types/koa-joi-router": "^5.2.3",
-    "@types/koa-qs": "2.0.0",
-    "@types/koa-router": "^7.4.1",
-    "@types/lodash": "^4.14.157",
-    "@types/mustache": "^4.1.0",
-    "@types/node": "^14.14.11",
-    "@types/pg": "^7.14.7",
-    "@types/showdown": "1.9.3",
+    "@types/bunyan": "~1.8.8",
+    "@types/jest": "~27.4.0",
+    "@types/joi": "~17.2.3",
+    "@types/koa": "~2.13.4",
+    "@types/koa-joi-router": "~8.0.4",
+    "@types/koa-qs": "~2.0.0",
+    "@types/koa-router": "~7.4.4",
+    "@types/mustache": "~4.1.2",
+    "@types/node": "~17.0.13",
+    "@types/pg": "~8.6.4",
+    "@types/showdown": "~1.9.4",
     "@types/stack-trace": "0.0.29",
-    "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.0",
+    "@types/uuid": "~8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-promise": "4.2.1",
-    "jest": "^26.1.0",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.1.1",
-    "ts-node-dev": "^1.1.0",
-    "typescript": "^4.1.2"
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "~27.4.7",
+    "prettier": "^2.8.3",
+    "ts-jest": "~27.1.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
   }
 }
