--- a/worker/tsconfig.json
+++ b/worker/tsconfig.json
@@ -1,22 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "target": "es2019",
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
-    "typeRoots": [
-      "./src/types",
-      "./node_modules/@types"
-    ],
+    "typeRoots": ["./src/common/typings", "./node_modules/@types"],
     "outDir": "../build",
     "sourceMap": true,
     "noImplicitAny": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "strictPropertyInitialization": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "skipLibCheck": true
   },
-  "include": [
-    "shared/**/*.ts",
-    "src/**/*.ts",
-    "index.ts",
-    "test/**/*.ts"
-  ]
+  "include": ["shared/**/*.ts", "src/**/*.ts", "index.ts", "test/**/*.ts"]
 }
