--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:lts-alpine
+FROM node:18.16.1-alpine
 CMD echo "DISABLED: www not up-to-date" && tail -f /dev/null
 
 # # Builder, tester and runtime container for local development
