chore: update worker name

--- a/worker/package.json
+++ b/worker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scanwai-web-worker",
+  "name": "full-stack-template-worker",
   "private": true,
   "scripts": {
     "unit": "jest --rootDir=src --passWithNoTests -t",
