--- a/client/package.json
+++ b/client/package.json
@@ -49,8 +49,7 @@
     "react-router": "6.10.0",
     "react-router-dom": "6.10.0",
     "react-stately": "3.22.0",
-    "react-use": "17.4.0",
-    "styled-components": "5.3.5"
+    "react-use": "17.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.3.1",
@@ -78,7 +77,6 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "@types/react-router-dom": "5.3.3",
-    "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.59.1",
     "@typescript-eslint/parser": "5.59.1",
     "@vitejs/plugin-react-swc": "3.3.2",
