chore(client): simplify npm scripts

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "install:clean": "rm -rf node_modules && npm install",
     "pretty-quick": "pretty-quick",
-    "lint": "tsc --noEmit && eslint './src/**/*.{ts,tsx}' --ignore-path .eslintignore --quiet",
+    "lint": "npm-run-all -p lint:*",
+    "lint:tsc": "tsc --noEmit",
+    "lint:eslint": "eslint './src/**/*.{ts,tsx}' --ignore-path .eslintignore --quiet",
     "unit": "echo TODO make this work in container vitest run ./src/**/*.test.{ts,tsx}",
     "unit:coverage": "vitest run ./src/**/*.test.{ts,tsx} --coverage",
     "test": "echo TODO run tests but not cypress",
@@ -19,10 +21,10 @@
     "lang:extract": "lingui extract",
     "uikit:preview": "storybook dev -p 6006",
     "uikit:build": "storybook build",
-    "design-system:sync": "npm run design-system:tokenize && npm run design-system:codegen && npm run design-system:format",
-    "design-system:tokenize": "npx figmage tokenize --env .env.figma",
-    "design-system:codegen": "npx figmage codegen --env .env.figma",
-    "design-system:format": "prettier --write \"design-system/*.ts\"",
+    "design-system:sync": "npm-run-all -s design-system:tokenize design-system:codegen design-system:format",
+    "design-system:tokenize": "npx figmage tokenize --env ./styled-system/.env",
+    "design-system:codegen": "npx figmage codegen --env ./styled-system/.env",
+    "design-system:format": "prettier --write \"styled-system/tokens/*.ts\"",
     "generate": "npm-run-all -p generate:*",
     "generate:lang": "lingui compile",
     "generate:graphql": "graphql-codegen --config codegen.yml",
