feat: add code quality checks with github actions

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "test": "jest --rootDir=test --passWithNoTests -t",
     "start": "npm run start:dev",
     "start:dev": "NODE_ENV=development ts-node-dev --respawn --inspect=0.0.0.0:9229 -- index.ts | bunyan -l debug",
-    "lint": "tsc -p . --noEmit && eslint './src/**/*.ts' --ignore-path .eslintignore --quiet",
+    "lint": "eslint './src/**/*.ts' --ignore-path .eslintignore --quiet",
+    "typecheck": "tsc -p . --noEmit",
     "build:test": "tsc --build tsconfig.test.json",
     "build:prod": "NODE_ENV=production tsc --build tsconfig.json",
     "start:prod": "NODE_ENV=production npm run build:prod && node build/index.js",
