--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,8 @@
   "scripts": {
     "install:clean": "rm -rf node_modules && npm install",
     "pretty-quick": "pretty-quick",
-    "lint": "npm-run-all -p lint:*",
-    "lint:tsc": "tsc --noEmit",
-    "lint:eslint": "eslint './src/**/*.{ts,tsx}' --ignore-path .eslintignore --quiet",
+    "lint": "eslint './src/**/*.{ts,tsx}' --ignore-path .eslintignore --quiet",
+    "typecheck": "tsc --noEmit",
     "unit": "echo TODO make this work in container vitest run ./src/**/*.test.{ts,tsx}",
     "unit:coverage": "vitest run ./src/**/*.test.{ts,tsx} --coverage",
     "test": "echo TODO run tests but not cypress",
