--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "info": "yes | taito ${taito_options} secret show:${taito_env} basic-auth",
     "taito-host-lint": "echo Running lint locally && npm-run-all -p -c taito-host-lint:admin taito-host-lint:client taito-host-lint:server taito-host-lint:worker taito-host-lint:www ",
     "taito-host-lint:admin": "cd admin && echo DISABLED: lint disabled from admin until updated or removed",
-    "taito-host-lint:client": "cd client && npm-run-all lint",
-    "taito-host-lint:server": "cd server && npm-run-all lint",
+    "taito-host-lint:client": "cd client && npm-run-all lint typecheck",
+    "taito-host-lint:server": "cd server && npm-run-all lint typecheck",
     "taito-host-lint:worker": "cd worker && npm-run-all lint",
     "taito-host-lint:www": "cd www && npm-run-all lint",
     "taito-host-unit": "echo Running unit tests locally && npm-run-all -p -c taito-host-unit:admin taito-host-unit:client taito-host-unit:server taito-host-unit:worker taito-host-unit:www ",
