fix(client): copy .npmrc on Dockerfile.build

--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -30,6 +30,7 @@ WORKDIR /develop
 ARG SERVICE_DIR=.
 COPY ${SERVICE_DIR}/package.json \
     ${SERVICE_DIR}/package-lock.* \
+    ${SERVICE_DIR}/.npmrc \
     /develop/
 
 ENV NODE_ENV development
