feat: do not update container package-lock.json files on host

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "install-ci": "npm-run-all install-all:shared",
     "install-dev": "echo '# Installing all libraries on host for code editor support. TODO how to minimize as --only=dev affects devDepencies also?' && npm-run-all install-all",
     "install-all": "npm-run-all -c install-all:admin install-all:client install-all:shared install-all:server install-all:worker install-all:www ",
-    "install-all:admin": "echo admin libs... && cd admin && mkdir -p node_modules && npm install || echo WARNING: Some libs failed to install",
-    "install-all:client": "echo client libs... && cd client && mkdir -p node_modules && npm install || echo WARNING: Some libs failed to install",
-    "install-all:server": "echo server libs... && cd server && mkdir -p node_modules && npm install || echo WARNING: Some libs failed to install",
-    "install-all:shared": "echo shared libs... && cd shared && mkdir -p node_modules && npm install || echo WARNING: Some libs failed to install",
-    "install-all:worker": "echo worker libs... && cd worker && mkdir -p node_modules && npm install || echo WARNING: Some libs failed to install",
-    "install-all:www": "echo www libs... && cd www && mkdir -p node_modules && npm install || echo WARNING: Some libs failed to install",
+    "install-all:admin": "echo admin libs... && cd admin && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
+    "install-all:client": "echo client libs... && cd client && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
+    "install-all:server": "echo server libs... && cd server && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
+    "install-all:shared": "echo shared libs... && cd shared && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
+    "install-all:worker": "echo worker libs... && cd worker && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
+    "install-all:www": "echo www libs... && cd www && mkdir -p node_modules && npm install --no-save || echo WARNING: Some libs failed to install",
     "taito-init": "taito -z ${taito_options} init:${taito_env} && npm-run-all import-db-data generate",
     "taito-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm-run-all import-db-data clean:storage generate",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito ${taito_options} db import:${taito_env} ./database/data/${taito_env}.sql; fi",
