--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -34,8 +34,7 @@ COPY ${SERVICE_DIR}/package.json \
     /develop/
 
 ENV NODE_ENV development
-# TODO: use 'npm ci' once works (bug in npm?)
-RUN npm install --loglevel warn --no-audit
+RUN npm ci --loglevel warn --no-audit
 
 COPY ${SERVICE_DIR} /develop
 
