--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -1,7 +1,7 @@
 # Builder and tester container for production build
 # NOTE: Use the same cypress version both in Dockerfile and package.json to
 #       avoid unnecessary cypress download
-FROM node:18.16.1 as builder
+FROM node:20.9.0-alpine as builder
 
 RUN mkdir -p /develop
 WORKDIR /develop
