feat(symfony): use php 8.2, lock composer and symfony versions

--- a/alternatives/server-symfony/Dockerfile
+++ b/alternatives/server-symfony/Dockerfile
@@ -1,6 +1,6 @@
 # Original: https://github.com/dunglas/symfony-docker/blob/380dc902595e0575c07f68f84e3266745e8f8100/Dockerfile
 
-ARG PHP_VERSION=8.1
+ARG PHP_VERSION=8.2
 
 # "builder" stage
 FROM php:${PHP_VERSION}-fpm-alpine AS builder
@@ -63,7 +63,7 @@ RUN chmod +x /usr/local/bin/docker-entrypoint
 
 VOLUME /var/run/php
 
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+COPY --from=composer:2.5.7 /usr/bin/composer /usr/bin/composer
 
 # https://getcomposer.org/doc/03-cli.md#composer-allow-superuser
 ENV COMPOSER_ALLOW_SUPERUSER=1
@@ -81,7 +81,7 @@ ARG STABILITY="stable"
 ENV STABILITY ${STABILITY}
 
 # Allow to select skeleton version
-ARG SYMFONY_VERSION=""
+ARG SYMFONY_VERSION="6.3.*"
 ENV SYMFONY_VERSION ${SYMFONY_VERSION}
 
 # Download the Symfony skeleton and leverage Docker cache layers
