--- a/admin/Dockerfile.build
+++ b/admin/Dockerfile.build
@@ -1,7 +1,10 @@
+ARG BUILDER_IMAGE='node:20.9.0-alpine'
+ARG RUNTIME_IMAGE='nginx:stable-alpine'
+
 # Builder and tester container for production build
 # NOTE: Use the same cypress version both in Dockerfile and package.json to
 #       avoid unnecessary cypress download
-FROM node:20.9.0-alpine as builder
+FROM ${BUILDER_IMAGE} as builder
 
 RUN mkdir -p /develop
 WORKDIR /develop
@@ -28,7 +31,7 @@ RUN npm run unit
 RUN npm run build && cp -r ./assets/* /build/
 
 # Production runtime
-FROM nginx:stable-alpine
+FROM ${RUNTIME_IMAGE}
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
     company=companyname \
