--- a/alternatives/client-static/Dockerfile.build
+++ b/alternatives/client-static/Dockerfile.build
@@ -1,5 +1,7 @@
+ARG BUILDER_IMAGE='nginx:stable-alpine'
+
 # Production runtime
-FROM nginx:stable-alpine as builder
+FROM ${BUILDER_IMAGE} as builder
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
       company=companyname \
