--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -17,12 +17,15 @@
 
 # Node v20.9.0 has npm v9.6.5 (should match the version in package.json `engines` field!)
 ARG NODE_VERSION='20.9.0'
-# Cypress factory image uses this arg so you can control the base image
+# BASE_IMAGE us used by 'cypress/factory' image
 ARG BASE_IMAGE='node:20.9.0'
+# Change BUILDER_IMAGE to 'cypress/factory' when you are ready to do e2e testing
+ARG BUILDER_IMAGE='node:20.9.0'
+ARG RUNTIME_IMAGE='nginx:stable-alpine'
 
 # Enable Cypress factory image when you are ready to do e2e testing
 # FROM cypress/factory as builder
-FROM ${BASE_IMAGE} as builder
+FROM ${BUILDER_IMAGE} as builder
 
 RUN mkdir -p /develop
 WORKDIR /develop
@@ -50,7 +53,7 @@ RUN npm run unit
 RUN npm run build
 
 # Production runtime
-FROM nginx:stable-alpine
+FROM ${RUNTIME_IMAGE}
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
     company=companyname \
