--- a/server/Dockerfile.build
+++ b/server/Dockerfile.build
@@ -1,5 +1,8 @@
+ARG BUILDER_IMAGE='node:20.9.0-alpine'
+ARG RUNTIME_IMAGE='node:20.9.0-alpine'
+
 # Builder and tester container for production build
-FROM node:20.9.0-alpine as builder
+FROM ${BUILDER_IMAGE} as builder
 RUN apk add --update-cache build-base python3 git fontconfig
 
 RUN mkdir -p /develop
@@ -21,7 +24,7 @@ RUN npm run unit
 RUN npm run build:prod
 
 # Production runtime container
-FROM node:20.9.0-alpine
+FROM ${RUNTIME_IMAGE}
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
       company=companyname \
