--- a/www/Dockerfile.build
+++ b/www/Dockerfile.build
@@ -1,5 +1,8 @@
+ARG BUILDER_IMAGE='node:lts-buster-slim'
+ARG RUNTIME_IMAGE='nginx:stable-alpine'
+
 # Builder and tester container for production build
-FROM node:lts-buster-slim as builder
+FROM ${BUILDER_IMAGE} as builder
 
 RUN mkdir -p /develop
 WORKDIR /develop
@@ -38,7 +41,7 @@ RUN npm run build && \
 
 
 # Production runtime
-FROM nginx:stable-alpine
+FROM ${RUNTIME_IMAGE}
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
     company=taito \
